--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -11,8 +11,13 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-18.04
+          - ubuntu-22.04
     steps:
+      - shell: bash
+        env: 
+          SUPER_SECRET: ${{secrets.RAILS_MASTER_KEY}}
+        run: |
+          example-command "$SUPER_SECRET"
       - name: Cache multiple paths
         uses: actions/cache@v2
         with:
